# convergio-prompts

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-prompts/: Cargo.toml
crates/convergio-prompts/data/: agents_meta.txt
crates/convergio-prompts/data/agents/: adversarial-debugger.md  ali-chief-of-staff.md  ali-orchestrator.md  amy-cfo.md  andrea-customer-success-manager.md  anna-executive-assistant.md  antonio-strategy-expert.md  app-release-manager-execution.md  app-release-manager.md  baccio-tech-architect.md  behice-cultural-coach.md  ceo.md  coach-team-coach.md  compliance-validator.md  context-optimizer.md  convergio-api-expert.md  dan-engineering-gm.md  dario-debugger.md  dave-change-management-specialist.md  davide-project-manager.md  deep-repo-auditor.md  design-validator.md  diana-performance-dashboard.md  doc-validator.md  domik-mckinsey-strategic-decision-maker.md  dr-enzo-healthcare-compliance-manager.md  ecosystem-sync.md  elena-legal-compliance-expert.md  enrico-business-process-engineer.md  fabio-sales-business-development.md  feature-release-manager.md  fiona-market-analyst.md  giulia-hr-talent-acquisition.md  guardian-ai-security-validator.md  jenny-inclusive-accessibility-champion.md  jony-creative-director.md  luca-security-expert.md  luke-program-manager.md  marcello-pm.md  marco-devops-engineer.md  (+31 more)
crates/convergio-prompts/data/skills/: check.md  execute.md  interview.md  planner.md  prepare.md  prompt.md  release.md  research.md  solve.md
crates/convergio-prompts/src/: ab_test.rs  ext.rs  lib.rs  mcp_defs.rs  optimizer.rs  pipeline.rs  render.rs  routes.rs  schema.rs  seed_skills.rs  skills.rs  skills_tests.rs  spawn.rs  store.rs  types.rs
crates/convergio-prompts/src/seed/: mod.rs  seed_agents.rs  seed_data_1.rs  seed_data_2.rs  seed_data_3.rs  seed_skills.rs
crates/convergio-prompts/tests/: e2e_prompts_api.rs  e2e_prompts_core.rs
docs/adr/: 001-audit-security-fixes.md  001-extraction.md
